<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/MainFragment">

    <fragment
            android:id="@+id/MainFragment"
            android:name="de.htw.gezumi.MainFragment"
            android:label="@string/main_label"
            tools:layout="@layout/fragment_main">

        <action android:id="@+id/action_MainFragment_to_Host" app:destination="@id/Host">
            <argument android:name="isHost" android:defaultValue="true"/>
        </action>
        <action android:id="@+id/action_MainFragment_to_Join" app:destination="@id/Join">
            <argument android:name="isHost" android:defaultValue="false"/>
        </action>
    </fragment>
    <fragment
            android:id="@+id/Host"
            android:name="de.htw.gezumi.ConnectionFragment"
            android:label="@string/host_label"
            tools:layout="@layout/fragment_connection">
        <action android:id="@+id/action_HostFragment_to_Game" app:destination="@id/Game"/>
        <argument android:name="isHost" app:argType="boolean"/>
    </fragment>

    <fragment
            android:id="@+id/Join"
            android:name="de.htw.gezumi.ConnectionFragment"
            android:label="@string/join_label"
            tools:layout="@layout/fragment_connection">
        <argument android:name="isHost" app:argType="boolean"/>
    </fragment>

    <fragment
            android:id="@+id/Game"
            android:name="de.htw.gezumi.GameFragment"
            android:label="@string/game_label"
            tools:layout="@layout/fragment_game">
        <argument
                android:name="device"
                app:argType="android.bluetooth.BluetoothDevice" />
    </fragment>
</navigation>