<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuFragment">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="406dp"
            android:layout_height="272dp"
            android:text="@string/main_fragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" android:fontFamily="@font/roboto_mono" android:textSize="36sp"
            app:srcCompat="@drawable/ic_logo" android:contentDescription="@string/logo"
            app:layout_constraintHorizontal_bias="0.4"/>
    <Button
            android:id="@+id/button_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/host"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0" app:layout_constraintTop_toBottomOf="@+id/button_join"
            android:layout_marginTop="16dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_mono"/>
    <Button
            android:id="@+id/button_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/input_name_wrapper"
            app:layout_constraintVertical_bias="0" android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_mono"/>
    <Button
            android:text="@string/direct_to_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/button_host"
            app:layout_constraintHorizontal_bias="0" android:layout_marginTop="16dp" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" android:fontFamily="@font/roboto_mono"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input_name_wrapper"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginTop="76dp"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:fontFamily="@font/roboto_mono"
            android:autofillHints="@string/player_name"
            android:hint="@string/player_name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:maxLength="8"
                android:singleLine="true"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:fontFamily="@font/roboto_mono"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
